# dagster-authkit

./: .gitignore  404.html  CHANGELOG.md  Dockerfile  Makefile  README.md  dagster.yml  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
CHANGELOG/: index.html
api/api/health/: index.html
api/api/routes/: index.html
api/auth/backends/base/: index.html
api/auth/backends/ldap/: index.html
api/auth/backends/proxy/: index.html
api/auth/backends/sql/: index.html
api/auth/rate_limiter/: index.html
api/auth/security/: index.html
api/auth/session/: index.html
api/cli/: index.html
api/config/: index.html
api/core/detection_layer/: index.html
api/core/graphql_analyzer/: index.html
api/core/middleware/: index.html
api/core/patch/: index.html
api/core/registry/: index.html
api/dagster_authkit/: index.html
api/utils/audit/: index.html
api/utils/templates/: index.html
dagster_authkit/: __init__.py
dagster_authkit/api/: health.py  routes.py
dagster_authkit/auth/: manager.py  models.py  rate_limiter.py  security.py  session.py
dagster_authkit/auth/backends/: __init__.py  base.py  dummy.py  ldap.py  oauth.py  proxy.py  sql.py  sqlite.py
dagster_authkit/cli/: cli_tools.py  main.py
dagster_authkit/core/: detection_layer.py  graphql_analyzer.py  middleware.py  patch.py  registry.py
dagster_authkit/utils/: audit.py  config.py  display.py  logging.py  templates.py
docs/: index.md
docs/api/: cli.md  config.md  dagster_authkit.md
docs/api/api/: health.md  routes.md
docs/api/auth/: rate_limiter.md  security.md  session.md
docs/api/auth/backends/: base.md  ldap.md  proxy.md  sql.md
docs/api/core/: detection_layer.md  graphql_analyzer.md  middleware.md  patch.md  registry.md
docs/api/utils/: audit.md  templates.md
examples/authelia/: Caddyfile  Makefile  docker-compose.yml
examples/authelia/authelia/: configuration.yml  users_database.yml
examples/authelia/ldap/: bootstrap.ldif
examples/kubernetes/: Makefile
examples/kubernetes/k8s/: namespace.yaml
examples/kubernetes/k8s/authelia/: configmap.yaml  deployment.yaml  service.yaml
examples/kubernetes/k8s/caddy/: configmap.yaml  deployment.yaml  service.yaml
examples/kubernetes/k8s/dagster/: deployment.yaml  service.yaml
examples/kubernetes/k8s/ldap/: configmap.yaml  deployment.yaml  service.yaml
examples/ldap/: .env.example  Makefile  docker-compose.yml  ldap-bootstrap.ldif
examples/postgresql_redis/: .env.example  Makefile  docker-compose.yml
examples/quickstart-sqlite/: .env.example  Makefile  docker-compose.yml
helm/: output.md
helm/dagster-authkit/: Chart.yaml  values.yaml
helm/dagster-authkit/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
search/: search_index.json
tests/: conftest.py  test_audit.py  test_auth_base.py  test_auth_dummy.py  test_auth_ldap.py  test_auth_proxy.py  test_auth_sql.py  test_cli.py  test_config.py  test_detection_layer.py  test_display.py  test_graphql_analyzer.py  test_health.py  test_logging.py  test_middleware.py  test_patch.py  test_rate_limiter.py  test_registry.py  test_routes.py  test_security.py  test_session.py  test_templates.py
tests/integration/: test_multi_pod.py
