[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster-authkit"
version = "0.3.0"
description = "Community Auth System for self-hosted Dagster OSS - RBAC, Audit Logging, and Session Management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Demetrius Albuquerque", email = "demetrius.albuquerque@yahoo.com.br"}
]
keywords = [
    "dagster", "data-orchestration", "data-pipeline", "authentication",
    "authorization", "rbac", "security", "audit-logging", "self-hosted",
    "data-platform", "data-engineering", "devops", "dagster-auth",
    "access-control", "session-management", "data-governance"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration :: Authentication/Directory"
]

# Core dependencies (Always installed)
dependencies = [
    "dagster>=1.10.0,<2.0.0",
    "dagster-webserver>=1.10.0,<2.0.0",
    "starlette>=0.52.1",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.22",
    "peewee>=3.19.0",
    "click>=8.0.0",
    "graphql-core>=3.2.7"
]

[project.optional-dependencies]
# Database Drivers
sqlite = ["bcrypt>=5.0.0"]
postgresql = ["psycopg2-binary>=2.9.9", "bcrypt>=5.0.0"]
mysql = ["mysql-connector-python>=8.0.33", "bcrypt>=5.0.0"]
mariadb = ["mariadb>=1.1.8", "bcrypt>=5.0.0"]

# Session & Cache
redis = ["redis>=7.1.0"]


ldap = ["ldap3>=2.9.0"]

# Future Backends (Maintained as requested)
oauth = ["authlib>=1.2.0", "httpx>=0.24.0"]

# Development & Testing
dev = [
    "pytest>=9.0.2", 
    "pytest-asyncio>=1.3.0",
    "twine>=4.0.0",
    "build>=0.10.0", 
    "black>=26.1.0", 
    "ruff>=0.14.14"
]

# Install everything
all = ["dagster-authkit[sqlite,postgresql,mysql,mariadb,redis,ldap,oauth]"]

[project.urls]
Homepage = "https://github.com/maltzsama/dagster-authkit"
Repository = "https://github.com/maltzsama/dagster-authkit"
Issues = "https://github.com/maltzsama/dagster-authkit/issues"

[project.scripts]
dagster-authkit = "dagster_authkit.cli.main:main"

[project.entry-points."dagster_auth.backends"]
dummy = "dagster_authkit.auth.backends.dummy:DummyAuthBackend"
sql = "dagster_authkit.auth.backends.sql:PeeweeAuthBackend"
sqlite = "dagster_authkit.auth.backends.sql:PeeweeAuthBackend" # Alias for compatibility
ldap = "dagster_authkit.auth.backends.ldap:LDAPAuthBackend"
proxy = "dagster_authkit.auth.backends.proxy:ProxyAuthBackend"

[tool.setuptools.packages.find]
where = ["."]
include = ["dagster_authkit*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]